--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wbpack Boilerplate</title>
+    <title>Leaderboard</title>
   </head>
   <body>
-    <h1>New Project!</h1>
+    <h1>Leaderboard</h1>
+    <main class="main">
+      <div class="list">
+        <div class="listHeader">
+          <h2>Recent scores</h2>
+          <button type="submit">Refresh</button>
+        </div>
+        <ul>
+          <li>Name: Score</li>
+          <li>Name: Score</li>
+          <li>Name: Score</li>
+        </ul>
+      </div>
+  
+      <div class="input">
+        <h3>Add your score</h3>
+        <input type="text">
+        <input type="text">
+        <button type="submit">Submit</button>
+      </div>
+    </main>
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
