Add position styling

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
       <div class="list">
         <div class="listHeader">
           <h2>Recent scores</h2>
-          <button type="submit">Refresh</button>
+          <button class="refresh-btn" type="submit">Refresh</button>
         </div>
-        <ul>
-          <li>Name: Score</li>
-          <li>Name: Score</li>
-          <li>Name: Score</li>
+        <ul class="list-box">
+          <li class="list-item">Name: Score</li>
+          <li class="list-item">Name: Score</li>
+          <li class="list-item">Name: Score</li>
         </ul>
       </div>
   
@@ -24,7 +24,7 @@
         <h3>Add your score</h3>
         <input type="text">
         <input type="text">
-        <button type="submit">Submit</button>
+        <button class="submit-btn" type="submit">Submit</button>
       </div>
     </main>
     <script src="dist/bundle.js"></script>
